[package]
name = "ffindexrs"
version = "0.1.0"
authors = ["Gitea <gitea@fake.local>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "*"
csv = "*"
clap = "*"
serde = { version = "1.0", features = ["derive"] }

