[package]
name = "ffindexrs"
version = "0.2.0"
authors = ["andreas.hauser@lmu.de"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7"
csv = "1"
clap = "4"
serde = { version = "1.0", features = ["derive"] }

